Closed
Bug 1370252
Opened 9 years ago
Closed 9 years ago
Several jit-tests fail when run with incremental GC zeal
Categories
(Core :: JavaScript: GC, defect)
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox55 | --- | fixed |
People
(Reporter: jonco, Assigned: jonco)
Details
Attachments
(1 file)
|
6.31 KB,
patch
|
sfink
:
review+
|
Details | Diff | Splinter Review |
When I run the jit-tests with one of the incremental GC zeal modes I get a bunch of spurious failures because various tests try to start a GC when there is one running already due to zeal, e.g.:
~/clone/dev/js/src$ JS_GC_ZEAL=10 ./jit-test/jit_test.py optdebug-dist-build/shell gc
[ 1| 0| 0| 0] 0% > | 0.3s
/home/jon/clone/dev/js/src/jit-test/tests/basic/external-strings-cgc.js:2:1 Error: Incremental GC already in progress
Stack:
@/home/jon/clone/dev/js/src/jit-test/tests/basic/external-strings-cgc.js:2:1
Exit code: 3
FAIL - basic/external-strings-cgc.js
[110| 1| 0| 0] 42% ==================> | 3.3s
/home/jon/clone/dev/js/src/jit-test/tests/gc/bug-1271110.js:35:1 Error: Incremental GC already in progress
Stack:
@/home/jon/clone/dev/js/src/jit-test/tests/gc/bug-1271110.js:35:1
Exit code: 3
FAIL - gc/bug-1271110.js
[123| 2| 0| 0] 47% =====================> | 4.1s
/home/jon/clone/dev/js/src/jit-test/tests/gc/bug-1301496.js:4:1 Error: Incremental GC already in progress
Stack:
@/home/jon/clone/dev/js/src/jit-test/tests/gc/bug-1301496.js:4:1
Exit code: 3
FAIL - gc/bug-1301496.js
...
We should fix this so we can test incremental GC without having to sift through a bunch of expected failures.
| Assignee | ||
Comment 1•9 years ago
|
||
This patch makes disabling GC zeal finish any ongoing GC, and adds |gczeal(0)| to the start of all affected tests.
Running jit-tests with mode 10 (incremental zeal) now shows no failures. Mode 17 has a bunch of timeouts but no failures.
Attachment #8874462 -
Flags: review?(sphink)
Comment 2•9 years ago
|
||
Comment on attachment 8874462 [details] [diff] [review]
bug1370252-incremental-test
Review of attachment 8874462 [details] [diff] [review]:
-----------------------------------------------------------------
Oh, bleh.
Attachment #8874462 -
Flags: review?(sphink) → review+
Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/cab8d95ff4a9
Fix spurious jit-tests failures with incremental zeal mode r=sfink
Comment 4•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in
before you can comment on or make changes to this bug.
Description
•