Bug 1370252 - Fix spurious jit-tests failures with incremental zeal mode r=sfink