js/src/jit-test/tests/gc/bug-1301496.js
@@ -1,5 +1,6 @@
 if (helperThreadCount() == 0)
     quit();
+gczeal(0);
 startgc(1, 'shrinking');
 offThreadCompileScript("");
 // Adapted from randomly chosen test: js/src/jit-test/tests/parser/bug-1263355-13.js
