js/src/jit-test/tests/gc/bug-1323868.js
@@ -1,5 +1,6 @@
 if (helperThreadCount() == 0)
     quit();
+gczeal(0);
 startgc(8301);
 offThreadCompileScript("(({a,b,c}))");
 gcparam("maxBytes", gcparam("gcBytes"));
