js/src/jit-test/tests/gc/bug1283169.js
@@ -1,4 +1,5 @@
 if (helperThreadCount() === 0)
     quit(0);
+gczeal(0);
 startgc(45);
 offThreadCompileScript("print(1)");
