js/src/jit-test/tests/parser/bug-1263355-14.js
@@ -1,3 +1,4 @@
+gczeal(0);
 function g() {
     for (var j = 0; j < 999; ++j) {
         try {
